<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/view_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/delete_icon"
            android:layout_width="@dimen/ic_delete"
            android:layout_height="@dimen/ic_delete"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/padd_10"
            android:contentDescription="@null"
            android:src="@drawable/ic_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/padd_10"
            android:layout_toStartOf="@id/delete_icon"
            android:text="@string/delete"
            android:textColor="#fff"
            android:textSize="13sp" />

    </RelativeLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/cv_teacher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="4dp"
        app:cardCornerRadius="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:id="@+id/linear_teacher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="160dp"
                android:layout_height="68dp"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:gravity="center_vertical"
                android:text="@string/name"
                android:textAlignment="gravity"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <View
                android:id="@+id/view10"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="2dp"
                android:background="@color/cardview_shadow_start_color" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="33.3"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_email"
                    android:layout_width="match_parent"
                    android:layout_height="34dp"
                    android:layout_marginStart="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/email"
                    android:textAlignment="gravity"
                    android:textColor="@color/black" />

                <View
                    android:id="@+id/view11"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:background="@color/cardview_shadow_start_color" />

                <TextView
                    android:id="@+id/tv_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="34dp"
                    android:layout_marginStart="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/mobile"
                    android:textAlignment="gravity"
                    android:textColor="@color/black" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:background="@color/cardview_shadow_start_color" />

</FrameLayout>